# maf_ai

./: .gitignore  README.md  maf_analysis_report.md  main.py  pyproject.toml
maf_tools/: __init__.py  create_report_agent.py  drug_gene_interactions.py  dummy_tool.py  maf_summarizer.py  natural_language_parser.py  report_generation_task.py  somatic_interactions.py  task_delegator.py
tests/: test_drug_gene_interaction.py  test_maf_summarizer.py  test_natural_language_parser.py  test_somatic_interactions.py  test_task_delgator.py
