[project]
name = "maf-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.108.0",
    "langchain>=0.3.22",
    "langchain-community>=0.3.20",
    "langchain-openai>=0.3.11",
    "openai>=1.70.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "rich>=13.9.4",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "typer>=0.15.2",
]
